Poprawiony export (only postRepo fields)

--- a/templates/admin/post/preview.html.twig
+++ b/templates/admin/post/preview.html.twig
@@ -21,6 +21,13 @@
                     {% endfor %}
                 </tr>
             {% endfor %}
+{#            {% for creator in creators %}#}
+{#            <tr>#}
+{#                {% for field in creators %}#}
+{#                <td style="border: 1px #000000 solid; border-collapse: collapse">{{ field }}</td>#}
+{#                {% endfor %}#}
+{#            </tr>#}
+{#            {% endfor %}#}
             </tbody>
         </table>
 {#    {% endif %}#}
