--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -18,7 +18,7 @@
             <div class="col-12">
                 <h1 class="display-4 text-center mt-5">
                     <h2 class="col-12 mb-5"> Wszystkie publikacje:</h2>
-                    <form action="{{ path('export')}}" method="post"></form>
+                    <form action="{{ path('export') }}" method="POST">
                     <input type="submit" name="submit_docs" value="Export" class="btn btn-success ml-0">
                     <table>
                         <thead>
